fixed default options

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ test_pkl/*
 *test*
 .pytest_cache/*
 data/client_secrets.json
+data/Options.json
 data/Internal/token.json
 data/Internal/abuse_acknowledged
