--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,10 @@
 junkyard.py
 example file output
 
-pysync/Watcher.py
-
 test_pkl/*
 *test*
 .pytest_cache/*
 data/client_secrets.json
-data/Options.json
 data/Internal/token.json
 data/Internal/abuse_acknowledged
+data/Internal/Diff_info.pkl
